Fix: Align field values
Align the values of fields within the "More Information" section to match the styling of the "Customer Information" section.

--- a/src/components/CustomerServiceWorkspace.less
+++ b/src/components/CustomerServiceWorkspace.less
@@ -236,7 +236,7 @@
         align-items: flex-start;
 
         > span:first-child {
-          min-width: 60px;
+          min-width: 100px;
           flex-shrink: 0;
         }
       }
